# airlock

./: .dockerignore  .gitignore  Dockerfile  README.md  com.agentpeek.daemon.plist  main.go  server.json
.github/workflows/: publish-mcp.yml
Sources/agentpeek/Core/: NoteStore.swift  ResourceLockStore.swift
agentpeek-web/: index.html
agentpeek-web/src/: style.css
integrations/phenovcs-airlock-v2/: Cargo.toml  README.md
integrations/phenovcs-airlock-v2/docs/: ADAPTATION.md
integrations/phenovcs-airlock-v2/examples/: daemon.rs
integrations/phenovcs-airlock-v2/src/: autocommit.rs  cleanup.rs  cli.rs  git_ops.rs  lib.rs  main.rs  registry.rs
internal/store/: locks.go  locks_test.go
