[package]
name = "airlock-v2"
description = "Conservative auto-save / push daemon for git repositories (vendored from .airlock/bin/airlock-v2.py)"
authors = ["Phenotype"]
keywords = ["git", "airlock", "auto-commit", "backup", "daemon"]
categories = ["development-tools", "version-control"]

version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/airlock"
rust-version = "1.75"

[lib]
name = "airlock_v2"
path = "src/lib.rs"

[[bin]]
name = "airlock-v2"
path = "src/main.rs"

[dependencies]
# Core
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }

[dev-dependencies]
tempfile = "3.0"
